<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, tracker!</string>
    <string name="app_name">tracker</string>
    <string name="bl">Call Blocking</string>
    <string name="sms">SMS Bloking</string>
    <string name="trk">Anti Theft</string>
    <string name="clbl">Call Block</string>
    <string name="del">Delete</string>
    <string name="cls">Clear</string>
    <string name="no">New No :</string>
</resources>
