<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/hello"
    />
<Button android:onClick="traking" android:id="@+id/button1" android:text="@string/trk" android:layout_width="fill_parent" android:layout_height="100dip"></Button>
<Button android:onClick="calbl" android:id="@+id/button2" android:layout_width="fill_parent" android:layout_height="100dip" android:text="@string/bl"></Button>
<Button android:onClick="smsbl" android:id="@+id/button3" android:text="@string/sms" android:layout_width="fill_parent" android:layout_height="100dip"></Button>
</LinearLayout>
