<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="200dip"></ListView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/listView1"
        android:layout_alignLeft="@+id/listView1"
        android:layout_alignRight="@+id/listView1"
        android:layout_marginTop="20dip"
        android:text="Black List"></TextView>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView1"
        android:layout_alignRight="@+id/listView1"
        android:layout_below="@+id/listView1"
        android:onClick="delete"
        android:text="@string/del"></Button>

    <LinearLayout
        android:id="@+id/input"
        android:layout_marginTop="20dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/delete_button">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:textSize="25dip"></TextView>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_weight="7"
        android:layout_height="wrap_content"
        android:text=""></EditText>
    </LinearLayout>
    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/input"
        android:layout_marginTop="15dip"
        android:onClick="add"
        android:text="@string/cls"></Button>
</RelativeLayout>
